# opengl

./: .gitignore  .gitmodules  config.txt  requirements.txt
sample0/: .env  .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  envmake.sh  ogl_program  requirements.txt
sample0/include/glad/: glad.h
sample0/libs/glad/include/glad/: glad.h
sample0/src/: glad.c  main.c
src/: main.c
